[package]
name = "industry"
version = "0.1.0"
edition = "2021"
authors = ["Blue Dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez/", branch = "devel"}
rand = "0.7.3"
geometry_2d = { git = "https://github.com/BlueBukkitDev/geometry_2d"}
glam = "0.24.1"
image = "0.24.6"